--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
 
 <div id="content" style="width: 100%">
-    <h4 align="left">功能任务:</h4>
+    <h4 align="left">功能任务<a href="http://ttd.swat.ctripcorp.com:8099/#/testApplyList" target="_blank">(TDS)</a></h4>
     <table width="80%" border="2" cellspacing="0" cellpadding="4" bgcolor="white" align="left">
         <tr>
             <td>项目名</td>
@@ -52,7 +52,7 @@
         {% endfor %}
     </table>
 </div>
-<div id="footer" style="clear:both;text-align:center;float:bottom">
+<div id="footer" style="clear:both;text-align:center;float:bottom;">
 版权 © tester.com</div>
 </div>
 </div>
