--- a/templates/bootstrap_base_2.html
+++ b/templates/bootstrap_base_2.html
@@ -69,7 +69,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p class="text-muted">Place sticky footer content here.</p>
+        <p class="text-muted">版权 © HelloTester.com.</p>
     </div>
 </footer>
 
