--- a/templates/perf.html
+++ b/templates/perf.html
@@ -1,4 +1,4 @@
-{% extends "bootstrap_base_2.html" %}
+{% extends "bootstrap_base.html" %}
 
 {% block mytitle %} 性能测试 {% endblock %}
 
@@ -16,7 +16,7 @@
                 {% if field.errors %}
                     <div class="control-group error">
                         <label for="inputEmail3" class="col-sm-2 control-label">{{ field.label }}</label>
-                        <div class="col-sm-10">{{ field }}
+                        <div class="col-sm-8">{{ field }}
                             <span class="help-inline">
                                     {% for error in  field.errors %}{{ error }}{% endfor %}
                             </span>
@@ -25,7 +25,7 @@
                 {% else %}
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">{{ field.label }}</label>
-                        <div class="col-sm-10">{{ field }}
+                        <div class="col-sm-8">{{ field }}
                             {#      <input type="text" class="form-control" id="inputEmail3" placeholder="Email">#}
                             {% if field.help_text %}
                                 <small class="form-text text-muted">{{ field.help_text }}</small>
