--- a/templates/perf.html
+++ b/templates/perf.html
@@ -1,5 +1,8 @@
 {% extends "bootstrap_base.html" %}
-
+{% load static %}
+{% block js %}
+    <script src="{% static 'js/input_file.js' %}" type="text/javascript"></script>
+{% endblock %}
 {% block mytitle %} 性能测试 {% endblock %}
 
 {% block bodycontent %}
@@ -10,6 +13,32 @@
             passw:{{ form.pwd.value }}
         </p>
     {% else %}
+
+        <form method="post" action="{% url 'perf' %}" enctype="multipart/form-data">
+            <!-- COMPONENT START -->
+            <div class="form-group col-sm-8 col-sm-offset-2">
+                <div class="input-group input-file" name="Fichier1">
+                    <input type="text" class="form-control" placeholder='导入脚本' />
+                    <span class="input-group-btn">
+                        <button class="btn btn-default btn-choose" type="button" onclick="bs_input_file()">Choose</button>
+                    </span>
+                </div>
+            </div>
+
+            <!-- COMPONENT END -->
+            <div class="form-group col-sm-8 col-sm-offset-2">
+                <button type="submit" class="btn btn-primary pull-right" disabled >Submit</button>
+                <button type="reset" class="btn btn-danger pull-left">Reset</button>
+            </div>
+
+        </form>
+
+        <div class="control-group col-sm-12">
+            <hr>
+        </div>
+
+
+
         <form class="form-horizontal" method="post">
             {% csrf_token %}
             {% for field in form.visible_fields %}
@@ -43,6 +72,7 @@
                     </div>
                 </div>
             </div>
+
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
