--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,8 @@
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="{% url 'perf' %}" class="btn btn-lg btn-default">Perf Go</a>
-              <a href="{% url 'daily' %}" class="btn btn-lg btn-default">Daily Go</a>
+              <a href="{% url 'daily_task' %}" class="btn btn-lg btn-default">Daily Go</a>
+              <a href="{% url 'notice' %}" class="btn btn-lg btn-default">Notice Go</a>
             </p>
           </div>
 
