--- a/templates/perf.html
+++ b/templates/perf.html
@@ -37,8 +37,6 @@
             <hr>
         </div>
 
-
-
         <form class="form-horizontal" method="post">
             {% csrf_token %}
             {% for field in form.visible_fields %}
@@ -53,7 +51,7 @@
                     </div>
                 {% else %}
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-2 control-label">{{ field.label }}</label>
+                        <label for="inputEmail3" class="col-sm-2 control-label table">{{ field.label }}</label>
                         <div class="col-sm-8">{{ field }}
                             {#      <input type="text" class="form-control" id="inputEmail3" placeholder="Email">#}
                             {% if field.help_text %}
