--- a/templates/bootstrap_base.html
+++ b/templates/bootstrap_base.html
@@ -38,10 +38,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Hello Tester</a>
+            <a class="navbar-brand" href="{% url 'home' %}" style="font-size: x-large">Hello Tester</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav" style="font-size: 18px">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
