--- a/templates/bootstrap_base.html
+++ b/templates/bootstrap_base.html
@@ -10,7 +10,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="{% static 'favicon.ico' %}">
+    <link rel="icon" href="{% static '/img/despicable.ico' %}">
     <title>{% block mytitle %}Starter Template for Bootstrap{% endblock %}</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
