--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block selfcss %}
   <link href="{% static 'css/cover.css' %}" rel="stylesheet">
 {% endblock %}
-{% block mytitle %}HomePage{% endblock %}
+{% block mytitle %}Cover{% endblock %}
 {% block bar %}{% endblock %}
 {% block footer %}{% endblock %}
 {% block body %}
