--- a/templates/bootstrap_base.html
+++ b/templates/bootstrap_base.html
@@ -29,7 +29,7 @@
 {#  导航栏#}
 {% block bar %}
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
@@ -52,7 +52,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container-fluid">
 
     <div class="starter-template">
         {% block bodycontent %}
