--- a/templates/daily_work.html
+++ b/templates/daily_work.html
@@ -4,10 +4,10 @@
 {% block mytitle %}Daily{% endblock %}
 {% block selfcss %}
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet"/>
-    <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}" />
-	<link rel="stylesheet" type="text/css" href="{% static 'css/default.css' %}">
-    <link href="{% static 'css/site.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/default.css' %}">
+    <link href="{% static 'css/site.css' %}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 {% block bodycontent %}
     <h4 align="left">功能任务<a href="http://ttd.swat.ctripcorp.com:8099/#/testApplyList" target="_blank">(TDS)</a></h4>
@@ -110,14 +110,17 @@
             </div>
 
             <div class="col-md-6">
-                <form action="#" class="form-horizontal">
+                <form action="#" class="form-inline">
                     <div class="form-group">
                         <lable for="appidinput" class="control-lable">APPID</lable>
                         <input type="text" class="form-control" placeholder="appid" id="appidinput">
                     </div>
                     <button type="button" onclick="" class="btn btn-success">发布监控</button>
                 </form>
-
+            </div>
+            <hr>
+            <hr>
+            <div class="col-md-6">
                 <div class="input-group">
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -130,6 +133,16 @@
                                             <table cellpadding="4">
                                                 <tr>
                                                     <td><img src="{% static 'img/bird/1.png' %}" width="60"
+                                                             class="img-circle"/></td>
+                                                    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                                                        in venenatis enim... <a href="#">Read more...</a></td>
+                                                </tr>
+                                            </table>
+                                        </li>
+                                        <li class="news-item">
+                                            <table cellpadding="4">
+                                                <tr>
+                                                    <td><img src="{% static 'img/bird/2.png' %}" width="60"
                                                              class="img-circle"/></td>
                                                     <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
                                                         in venenatis enim... <a href="#">Read more...</a></td>
@@ -161,14 +174,27 @@
         </div>
     </div>
 
-
+    <script src="{% static 'js/jquery.bootstrap.newsbox.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery-1.10.2.js' %}" type="text/javascript"></script>
+{#    <script type=text/javascript">#}
+{#        $(function () {#}
+{#            $('.news').bootstrapNews({#}
+{#                newsPerPage: 1,#}
+{#                autoplay: true,#}
+{#                pauseOnHover: true,#}
+{#                direction: 'up',#}
+{#                newsTickerInterval: 4000,#}
+{#                onToDo: function () {#}
+{#                    console.log(this);#}
+{#                }#}
+{#            });#}
+{#        });#}
+{#    </script>#}
     {#    日期控件#}
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap-datetimepicker.js' %}" charset="UTF-8"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap-datetimepicker.rs.js' %}" charset="UTF-8"></script>
-    <script src="{% static 'js/jquery.bootstrap.newsbox.min.js' %}" type="text/javascript"></script>
-    <script src="http://www.jq22.com/jquery/jquery-1.10.2.js" type="text/javascript"></script>
     <script type="text/javascript">
         $('.form_date').datetimepicker({
             language: 'fr',
@@ -179,6 +205,18 @@
             startView: 2,
             minView: 2,
             forceParse: 0
+        });
+        $(function () {
+            $('.news').bootstrapNews({
+                newsPerPage: 1,
+                autoplay: true,
+                pauseOnHover: true,
+                direction: 'up',
+                newsTickerInterval: 4000,
+                onToDo: function () {
+                    console.log(this);
+                }
+            });
         });
     </script>
 
