--- a/templates/learn/learn_div.html
+++ b/templates/learn/learn_div.html
@@ -15,6 +15,7 @@
             width: 20%;
         }
         div#right{
+            height: 100%;
             width: 80%;
         }
         div#left,div#right{
@@ -23,7 +24,7 @@
     </style>
 </head>
 <body>
-    <div id="left">left</div>
-    <div id="right">right</div>
+    <div id="left" style="background-color: #1b6d85">left</div>
+    <div id="right" style="background-color: #8a6d3b">right</div>
 </body>
 </html>
