--- a/templates/bootstrap_base.html
+++ b/templates/bootstrap_base.html
@@ -20,16 +20,16 @@
 {% endblock %}
 {#    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">#}
      <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+{#      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>#}
+{#      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>#}
     <!--[endif]-->
 </head>
 
 <body>
 {#  导航栏#}
 {% block bar %}
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
+<nav class="navbar navbar-default navbar-fixed-top" >
+    <div class="container-fluid ">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
@@ -38,12 +38,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}" style="font-size: x-large">Hello Tester</a>
+            <a class="navbar-brand" href="{% url 'home' %}" style="font-size: x-large">Cover</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav" style="font-size: 18px">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li class="active"><a href="{% url 'daily_task' %}">Daily</a></li>
+                <li><a href="{% url 'perf' %}">Perf</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div><!--/.nav-collapse -->
@@ -74,10 +74,10 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{% static 'js/jquery.min.js' %}"><\/script>')</script>
+{#<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>#}
+<script>window.jQuery || document.write('<script src="{% static 'js/jquery-1.10.2.min.js' %}"><\/script>')</script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+{#<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->#}
 <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 </body>
 </html>
